k8s/overlays/aws/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer   # AWS ALB/NLB로 노출
